--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -1,6 +1,6 @@
 # Whenever a push is made to the master branch then run the job
 on:
-  
+  workflow_dispatch:
   push:
     branches:
       - main
